[gd_scene load_steps=2 format=3 uid="uid://dgii0h7huggwq"]

[ext_resource type="Script" uid="uid://c8d6asv5mwbdv" path="res://scripts/ui/card_reward_ui.gd" id="1_reward"]

[node name="CardRewardScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_reward")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "选择一张卡牌作为奖励"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RewardsContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SkipButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "跳过奖励"

[node name="ConfirmButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
disabled = true
text = "确认选择"
